@@ -17,22 +17,20 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  */
- 
+
 #include <includes.h>
 #include "hosts_gatherer.h"
 #include  "hg_subnet.h"
 
-/*
- * Returns 1 if the host must be filtered,
- * that is, it must NOT be included in the 
- * list.
- * Returns 0 if it must be included in the list
+/**
+ * Returns 1 if the host must be filtered, that is, it must NOT be included in
+ * the list.
+ * Returns 0 if it must be included in the list.
+ * 
+ * @return 0 if host must be included, 1 host must not be included
  */
 int 
-hg_filter_host(globals, hostname, addr)
- struct hg_globals * globals;
- char * hostname;
- struct in_addr addr;
+hg_filter_host (struct hg_globals* globals, char* hostname, struct in_addr addr)
 {
 #if DISABLED
  struct hg_host * list = globals->host_list;
@@ -49,7 +47,6 @@ int len = strlen(hostname);
   for(i=0;i<len;i++)copy[i]=tolower(copy[i]);
 
  */
- 
  
  while(list->next)
  {
@@ -75,15 +72,13 @@ int len = strlen(hostname);
 }
 
 
-/*
- * Returns 1 if the subnet must NOT
- * be tested
+/**
+ * @brief Returns 1 if the subnet must NOT be tested
+ * 
+ * @return 1 if the subnet must not be tested.
  */
 int
-hg_filter_subnet(globals, addr, netmask)
- struct hg_globals * globals;
- struct in_addr addr;
- int    netmask;
+hg_filter_subnet (struct hg_globals * globals, struct in_addr addr, int netmask)
 {
  struct hg_host * list = globals->tested;
  struct in_addr subnet;
@@ -106,14 +101,13 @@ hg_filter_subnet(globals, addr, netmask)
  return(0);
 }
 
-/*
- * Returns 1 if the domain must NOT
- * be tested
+/**
+ * @brief Returns 1 if the domain must NOT be tested
+ * 
+ * @return 1 if the domain must NOT be tested.
  */
 int
-hg_filter_domain(globals, domain)
- struct hg_globals * globals;
- char * domain;
+hg_filter_domain (struct hg_globals* globals, char* domain)
 {
  struct hg_host * list = globals->tested;
  if(!domain)return(0);
@@ -124,5 +118,3 @@ hg_filter_domain(globals, domain)
  }
  return(0);
 }
-
- 
